# robot_app

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  ash.sh  config_pdo_rc_fsr.sh  diagnostic.py  putdown_network.sh  start_ethercat.sh  start_server.sh  udpserver.py  udpserver_test.py
Client/: client.cpp
Server/: ParseFunc.h  RobotCopley.xml  RobotEDU2.xml  RobotEDU2_backup.xml  RobotEDU3.xml  RobotEDU5.xml  RobotEDU6.xml  RobotEDU6_bak.xml  RobotEDU6a.xml  RobotEdu.xml  RobotFaulhaber.xml  RobotO13.xml  Robot_Elmo.xml  Robot_Faulhaber.xml  calibration.cpp  calibration.h  find_joint_center.cpp  find_joint_center.h  main.cpp  move_body.cpp  move_body.h  move_body_with_force.cpp  move_body_with_force.h  say_hello.cpp  say_hello.h  swing.cpp  swing.h  twist_waist.cpp  twist_waist.h
Server/GaitPlanner/: DownStairPlanner.cpp  DownStairPlanner.h  FastWalk.cpp  FastWalk.h  HeightAdjustment.cpp  HeightAdjustment.h  HelloPlanner.cpp  HelloPlanner.h  HillClimbPlanner.cpp  HillClimbPlanner.h  MotorSelector.cpp  MotorSelector.h  RecoverPlanner.cpp  RecoverPlanner.h  StairClimbPlanner.cpp  StairClimbPlanner.h  UpStepClimbPlanner.cpp  UpStepClimbPlanner.h  WalkPlanner.cpp  WalkPlanner.h  walk2.cpp
Server/GaitPlanner/Kinematics/: InverseSolve.cpp  InverseSolve.h  InverseSolveLeg.cpp  InverseSolveLeg.h  LegKinematics.cpp  LegKinematics.h  RobotDefinitions.h
Tools/: config_pdo_rc_fsr.sh  diagnostic.py  udpserver.py
